// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WeatherForecast > when temperature unit is celsius 1`] = `
"<div class="p-6 color-white backdrop-blur-lg rounded-5">
  <p class="text-3">5-Day Forecast</p>
  <div class="w-full h-1px my-4 bg-white"></div>
  <ul class="lg-min-w-400px flex flex-col justify-between items-center">
    <li class="w-full flex justify-between items-center my-2 last:mb-0 first:mt-0">
      <p class="w-50px">Today</p><span class="iconify i-Sunny color-white mx-4" aria-hidden="true" style="font-size: 35px;"></span>
      <div class="flex items-center justify-between flex-1">
        <div class="flex items-start min-w-45px color-white font-sans">
          <p class="text-4 font-sans font-bold">25</p>
          <p class="text-3 font-sans font-bold">°C</p>
        </div>
        <div class="flex-1 h-2px mx-4 bg-white rounded"></div>
        <div class="flex items-start min-w-45px color-white font-sans">
          <p class="text-4 font-sans font-bold">30</p>
          <p class="text-3 font-sans font-bold">°C</p>
        </div>
      </div>
    </li>
  </ul>
</div>"
`;

exports[`WeatherForecast > when temperature unit is fahrenheit 1`] = `
"<div class="p-6 color-white backdrop-blur-lg rounded-5">
  <p class="text-3">5-Day Forecast</p>
  <div class="w-full h-1px my-4 bg-white"></div>
  <ul class="lg-min-w-400px flex flex-col justify-between items-center">
    <li class="w-full flex justify-between items-center my-2 last:mb-0 first:mt-0">
      <p class="w-50px">Today</p><span class="iconify i-Sunny color-white mx-4" aria-hidden="true" style="font-size: 35px;"></span>
      <div class="flex items-center justify-between flex-1">
        <div class="flex items-start min-w-45px color-white font-sans">
          <p class="text-4 font-sans font-bold">60</p>
          <p class="text-3 font-sans font-bold">°F</p>
        </div>
        <div class="flex-1 h-2px mx-4 bg-white rounded"></div>
        <div class="flex items-start min-w-45px color-white font-sans">
          <p class="text-4 font-sans font-bold">89</p>
          <p class="text-3 font-sans font-bold">°F</p>
        </div>
      </div>
    </li>
  </ul>
</div>"
`;
